--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Allura&display=swap');
-
-:root {
-    --primary: #ff69b4;
-    --primary-dark: #cc4d94;
-    --sombra-primary: #ffb6e0; /*#ffb6c1;*/
-}
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 16px;
-    scroll-behavior: smooth;
-}
-
-body {
-    font-family: 'Allura', cursive, sans-serif;
-    line-height: 1.5;
-    color: #333;
-    background-color: #e7e6e6;
-    max-width: 100vw;
-    max-height: 100vh;
-}
-
-/* Elementos semánticos */
-h1, h2, h3, h4, h5, h6 {
-    font-weight: 600;
-    line-height: 1.2;
-    margin-bottom: 0.5rem;
-}
-
-p {
-    margin-bottom: 1.5rem;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 1rem;
-    color: #555;
-}
-
-.contenedor {
-    /* position: absolute;
-    top: 100px;
-    left: 0; */
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    user-select: none;
-}
-
+@import url('normalizacion.css');
 
 .mensaje {
     font-size: 3rem;
