--- a/minijuego/littlegame.css
+++ b/minijuego/littlegame.css
@@ -1,6 +1,6 @@
 @import url('../normalizacion.css');
 
-.pantallaini {
+.pantallaini, .pantallajuego {
     position:absolute;
     top:0;
     background-color: rgba(10, 10, 10, 0.894);
@@ -10,8 +10,10 @@
     align-items: center;
     height: 100vh;
     width: 100vw;
-    z-index: 100;
     cursor: pointer;
+}
+.pantallaini{
+    z-index: 10;
 }
 
 .titulo {
@@ -60,29 +62,65 @@
     pointer-events: none;
 }
 
+.pantallajuego{
+    z-index: 5;
+}
+
+.tiempo {
+    position: relative;
+    top: -100px;
+    font-size: 2rem;
+    color: var(--primary-dark);
+    margin: 10px;
+    font-family: 'allura', cursive;
+}
+
+.globo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+    margin: 0 auto;
+    cursor: pointer;;
+}
+
 .cabezaglobo {
     width: 100px;
     height: 100px;
-    background: var(--primary);
-    border: 3px solid var(--primary-dark);
-    border-radius: 50%;
+    background: radial-gradient(circle at 30% 30%, var(--primary), var(--secondary));
+    border-radius: 50% 50% 45% 45%; /* forma ovalada */ 
+    position: relative; 
+    box-shadow: inset -10px -20px 30px var(--sombra-primary), inset 5px 5px 15px var(--highlight), 0 10px 15px rgba(0,0,0,0.4);
     margin: 0 auto;
     transition: all 0.2s ease;
 }
 
 .nudoglobo {
-    width: 20px;
-    height: 30px;
-    background: var(--primary);
-    border: 3px solid var(--primary-dark);
+    width: 12px;
+    height: 10px;
+    background: radial-gradient(circle at 30% 30%, var(--primary), var(--secondary));
+    box-shadow: inset -10px -20px 30px var(--sombra-primary), inset 5px 5px 15px var(--highlight), 0 10px 15px rgba(0,0,0,0.4);
     margin: 0 auto;
     border-radius: 10px 10px 0 0;
 }
 
+/* cuerda */ 
+/* .globo::after { 
+    content: ""; 
+    position: absolute; 
+    bottom: -40px; 
+    left: 50%; 
+    width: 2px; 
+    height: 40px; 
+    background: var(--textcolor);
+    transform: translateX(50%); 
+} */
+
 .cintaglobo {
-    width: 3px;
-    height: 70px;
-    background: #8b0000;
+    width: 2px;
+    height: 40px;
+    background: var(--textcolor);
     margin: 0 auto;
 }
 
