--- a/minijuego/littlegame.css
+++ b/minijuego/littlegame.css
@@ -66,13 +66,28 @@
     z-index: 5;
 }
 
-.tiempo {
-    position: relative;
-    top: -100px;
-    font-size: 2rem;
-    color: var(--primary-dark);
-    margin: 10px;
-    font-family: 'allura', cursive;
+.tiempo { 
+    position: fixed; 
+    top: 20px; 
+    left: 50%; 
+    transform: translateX(-50%); 
+    width: 120px;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    text-align: center; 
+    font-family: 'Courier New', Courier, monospace; 
+    color: var(--textcolor); 
+    border: #aaa 2px dotted; 
+    border-radius: 50%; 
+} 
+
+.tiempo span { 
+    font-size: 2.5rem; 
+    font-weight: bold;
+    line-height: 1; 
 }
 
 .globo {
@@ -80,7 +95,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0;
     margin: 0 auto;
     cursor: pointer;;
 }
