--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('normalizacion.css');
+@import url('animaciones.css');
 
 .mensaje {
     font-size: 3rem;
@@ -24,42 +25,3 @@ span#aparecer {
     animation: aparecerTexto 2s ease-in-out forwards;
 }
 
-
-/* Animación Texto */
-@keyframes flotar {
-    from, to {
-        transform: translate(0, 0);
-    }
-    50% {
-        transform: translate(0, -8px);
-    }
-}
-
-@keyframes brillo {
-  from, to {
-    text-shadow: 0 0 3px var(--sombra-primary), 0 0 6px var(--primary-dark), 0 0 9px var(--primary-dark);
-  }
-  50% {
-    text-shadow: 0 0 6px var(--sombra-primary), 0 0 12px var(--primary-dark), 0 0 18px var(--sombra-primary);
-  }
-}
-
-@keyframes girar {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes aparecerTexto {
-    0% {
-        opacity: 0;
-        transform: translateY(10px);
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
