--- a/minijuego/littlegame.css
+++ b/minijuego/littlegame.css
@@ -1,5 +1,6 @@
 @import url('../normalizacion.css');
 @import url('../animaciones.css');
+@import url('../mobile.css');
 
 .pantallaini, .pantallajuego {
     position:absolute;
